src/deploy-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    app: server
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
      version: v1
  template:
    metadata:
      labels:
        app: server
        version: v1
    spec:
      serviceAccountName: default
      containers:
      - name: server
        image: image-registry.openshift-image-registry.svc:5000/labproj28/server:v10
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
        resources: {}
status: {}
