src/svc-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  labels:
    app: client
    service: client
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: client
