src/svc-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app: server
    service: server
spec:
  ports:
  - port: 3001
    name: http
  selector:
    app: server
